--- a/index.html
+++ b/index.html
@@ -12,12 +12,28 @@
 
     <div class="top-banner">
         <div class="container">
-            <div class="small-bold-text banner-text"> New to Usability Hub: Open and Closed card sorting</div>
+            <div class="small-bold-text banner-text">New to Usability Hub: Open and Closed card sorting</div>
 
         </div>
     </div>
 
-    <nav></nav>
+    <nav>
+        <div class="container main-nav flex">
+            <a class="company-logo">
+                <img src="./assets/asset 1.png" alt="company-logo">
+            </a>
+            <div class="nav-links">
+              <ul class="flex">
+                <li><a href="#" class="hover-link">Products</a></li>
+                <li><a href="#" class="hover-link">Customer</a></li>
+                <li><a href="#" class="hover-link">Pricing</a></li>
+                <li><a href="#" class="hover-link">Resoureces</a></li>
+                <li><a href="#" class="hover-link secondary-button">Sign in</a></li>
+                <li><a href="#" class="hover-link primary-button">Sign up</a></li>
+              </ul>
+            </div>
+        </div>
+    </nav>
 
     <header>
      <div class="container"></div>
