--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="media-queries.css">
     </head>
 
     <body>
@@ -26,7 +27,7 @@
                 <a class="company-logo">
                     <img src="./assets/asset 1.png" alt="company-logo">
                 </a>
-                <div class="nav-links">
+                <div class="nav-links" id="nav-links">
                     <ul class="flex">
                         <li><a href="#" class="hover-link">Products</a></li>
                         <li><a href="#" class="hover-link">Customer</a></li>
@@ -36,6 +37,9 @@
                         <li><a href="#" class="hover-link primary-button">Sign up</a></li>
                     </ul>
                 </div>
+                <a href="#" class="nav-toggle hover-link" id="nav-toggle">
+                    <i class="fa-solid fa-bars"></i>
+                </a>
             </div>
 </nav>
 
@@ -140,7 +144,7 @@
         </section>
 
         <section class="big-feature-section">
-            <div class="container flex big-feature-container" style="flex-direction: row-reverse;">
+            <div class="container flex big-feature-container" id="second-big-feature">
                 <div class="feature-img">
                     <img src="./assets/asset 21.png" alt="">
                 </div>
@@ -249,8 +253,7 @@
                 </div>
 
                 <div class="link-column flex">
-                    <h4>Resources
-                    </h4>
+                    <h4>Resources</h4>
                     <a href="#" class="hover-link">Blog</a>
                     <a href="#" class="hover-link">Examples</a>
                     <a href="#" class="hover-link">Testing guides</a>
@@ -279,6 +282,13 @@
 
         <script src="https://kit.fontawesome.com/b8f166aade.js" crossorigin="anonymous"></script>
         
+        <script>
+            const toggleButton = document.getElementById("nav-toggle");
+            const navLinks = document.getElementById("nav-links");
+            toggleButton.addEventListener("click",()=>{
+                navLinks.classList.toggle("active");
+            })
+        </script>
     </body>
 
 </html>
